--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,8 @@ dependencies {
     //Dagger Hilt
     implementation "com.google.dagger:hilt-android:2.41"
     kapt "com.google.dagger:hilt-android-compiler:2.41"
+     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+
 
     //LiveData
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
@@ -89,6 +91,12 @@ dependencies {
     implementation 'com.google.android.exoplayer:exoplayer:2.15.1'
     implementation 'com.github.commandiron:WheelPickerCompose:1.1.11'
 
+//retrofit
+    // Retrofit for API requests
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+
+    implementation("com.squareup.okhttp3:okhttp:4.9.1")
 
 
 }
